  * renaming a file in the project renames it on disk aswell
  * improved build process, it should now be possible to compile Visual D following
    the instruction on http://www.dsource.org/projects/visuald/wiki/Build_from_source
  * updated to cv2pdb 0.14.

2010-07-09 Version 0.3.13

  * renaming a file in the project did not ensure the project to be saved
  * dragging a directory into the project now creates a folder and adds all files and
    folders found in that directory but those that start with "."
  * added project option "Enable informational warnings" (dmd option -wi)
  * resource files now have command "View Code"
  * fix: completion did not detect beginning of word at line end
  * fix: skipping through a string literal with ctrl-left/right skipped the whole string
  * now handling some optional project properties to keep AnkhSvn happy.
  * SCC status of project items is now shown (but not updated yet)
  * minor tweak of the ConsoleApp template
  * more files translated from the Windows SDK
  * now using label "reportError" instead of "xit" in build batches
  * options with multiple arguments are now delimited by both ';' and white spaces, use
    quotes if any of these need to be part of a file name

2010-07-23 Version 0.3.14

  * fixed parameter tooltips on VS2010
  * fixed debugger data tooltips on VS2010
  * fixed handling of quoted file/path names
  * updated bitmaps in aboutbox and templates to the website logo
  * added command VisualD.ParameterInfo to avoid hook by Visual Assist
  * fixed import completion for packages accessed through project import path settings
  * goto definition now displays error in status line if no definition found or opening source file fails
  * now jumping to definition if multiple definitions exist on the same line
  * brace highlighting now shows error in status line for mismatched brackets
  * brace highlighting now also shows begin/end of block comments
  * fixed pasting html text not omitting format information